--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 text-shadow: 0 1px white;
                 cursor: pointer;
                 outline: none;
+                font-family: 'Pangolin', cursive;
             }
 
             .button:hover {
